--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
     "register-service-worker": "^1.7.1",
